[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Fonts/reso_fonts/dynamicfont_54.tres" type="DynamicFont" id=2]
[ext_resource path="res://Textures/hud/Tuning_Sound.png" type="Texture" id=3]
[ext_resource path="res://Fonts/3572.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://theme.tres" type="Theme" id=5]
[ext_resource path="res://Textures/hud/click_ok.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0.109804, 0.105882, 0.168627, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 2
outline_color = Color( 0.109804, 0.105882, 0.168627, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 285.751 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0470588, 0.0470588, 0.529412 )
__meta__ = {
"_edit_lock_": true
}

[node name="LabelPause" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_top = 80.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 2 )
text = "Пауза"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -121.0
margin_right = 297.0
margin_bottom = 155.0
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="ColorRect/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 10.0
margin_right = -20.0

[node name="LabelSettings" type="Label" parent="ColorRect/NinePatchRect/Control"]
anchor_right = 1.0
margin_top = 7.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Настройки       "
align = 1
valign = 1

[node name="VBoxContainerLabel" type="VBoxContainer" parent="ColorRect/NinePatchRect/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -55.0
margin_right = 93.0
margin_bottom = 55.0
alignment = 1

[node name="LabelBGM" type="Label" parent="ColorRect/NinePatchRect/Control/VBoxContainerLabel"]
margin_right = 111.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "BGM"
align = 1
valign = 1

[node name="Control3" type="Control" parent="ColorRect/NinePatchRect/Control/VBoxContainerLabel"]
margin_top = 34.0
margin_right = 111.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 2 )

[node name="LabelSFX" type="Label" parent="ColorRect/NinePatchRect/Control/VBoxContainerLabel"]
margin_top = 40.0
margin_right = 111.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "SFX"
align = 1
valign = 1

[node name="Control4" type="Control" parent="ColorRect/NinePatchRect/Control/VBoxContainerLabel"]
margin_top = 74.0
margin_right = 111.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 2 )

[node name="LabelGhost" type="Label" parent="ColorRect/NinePatchRect/Control/VBoxContainerLabel"]
margin_top = 80.0
margin_right = 111.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 2 )
text = "призрак"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/NinePatchRect/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -397.0
margin_top = -42.0
margin_right = -20.0
margin_bottom = 42.0

[node name="HSlider_bgm" type="HSlider" parent="ColorRect/NinePatchRect/Control/VBoxContainer"]
margin_right = 377.0
margin_bottom = 6.0
theme = ExtResource( 5 )
min_value = -80.0
max_value = 0.0
value = -45.0
tick_count = 5
ticks_on_borders = true

[node name="Control" type="Control" parent="ColorRect/NinePatchRect/Control/VBoxContainer"]
margin_top = 10.0
margin_right = 377.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 25 )

[node name="HSlider_sfx" type="HSlider" parent="ColorRect/NinePatchRect/Control/VBoxContainer"]
margin_top = 39.0
margin_right = 377.0
margin_bottom = 45.0
theme = ExtResource( 5 )
min_value = -80.0
max_value = 0.0
value = -45.0
tick_count = 5
ticks_on_borders = true

[node name="Control2" type="Control" parent="ColorRect/NinePatchRect/Control/VBoxContainer"]
margin_top = 49.0
margin_right = 377.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 25 )

[node name="HSlider_ghost" type="HSlider" parent="ColorRect/NinePatchRect/Control/VBoxContainer"]
margin_top = 78.0
margin_right = 377.0
margin_bottom = 84.0
theme = ExtResource( 5 )
min_value = -80.0
max_value = 0.0
value = -45.0
tick_count = 5
ticks_on_borders = true

[node name="TextureButton_accept" type="TextureButton" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.36975
margin_top = 165.672
margin_right = 38.6302
margin_bottom = 213.672
rect_scale = Vector2( 1.1, 1.1 )
texture_normal = ExtResource( 6 )

[connection signal="value_changed" from="ColorRect/NinePatchRect/Control/VBoxContainer/HSlider_bgm" to="." method="_on_HSlider_bgm_value_changed"]
[connection signal="value_changed" from="ColorRect/NinePatchRect/Control/VBoxContainer/HSlider_sfx" to="." method="_on_HSlider_sfx_value_changed"]
[connection signal="value_changed" from="ColorRect/NinePatchRect/Control/VBoxContainer/HSlider_ghost" to="." method="_on_HSlider_ghost_value_changed"]
[connection signal="pressed" from="ColorRect/TextureButton_accept" to="." method="_on_TextureButton_accept_pressed"]
